# nlink

./: .gitignore  0.16-release-readiness-report.md  128-nlink-per-peer-impairer-plan.md  128-nlink-per-peer-impairer.md  128b-roadmap-overview.md  129-rate-bytes-percent-newtypes-plan.md  130-tc-handle-priority-newtypes-plan.md  131-reconcile-plan.md  132-api-cleanup-plan.md  133-tc-coverage-plan.md  134-tracing-instrumentation-plan.md  135-recipes-and-lab-helpers-plan.md  136-example-cleanup-plan.md  137-netfilter-expansion-plan.md  138-u32-filter-selector-grammar-plan.md  139-typed-standalone-action-crud-plan.md  140-ci-integration-tests-plan.md  141-xfrm-write-path-plan.md  142-zero-legacy-typed-api-plan.md  143-0.15.1-master-plan.md  144-0.15.1-ci-safety-nets-plan.md  145-0.15.1-doc-cleanup-plan.md  ANALYSIS.md  AUDIT_API.md  AUDIT_BUGS.md  AUDIT_REPORT.md  AUDIT_WIRE_FORMAT.md  CHANGELOG.md  CLAUDE.md  CODE_ANALYSIS.md  COMPARISON_NELI.md  CRATES_IO_PUBLISHING.md  CRATE_COMPARISON.md  Cargo.toml  FEATURE_COMPARISON.md  IMPLEMENTATION_PLAN.md  IPROUTE2_COMPARISON.md  LIBRARY_READINESS_REPORT.md  LICENSE-APACHE  NAMESPACE_BUG_ANALYSIS.md  (+24 more)
bins/bridge/: Cargo.toml
bins/bridge/src/: main.rs
bins/bridge/src/commands/: fdb.rs  link.rs  mdb.rs  mod.rs  monitor.rs  vlan.rs
bins/bridge/tests/: cli_parsing.rs
bins/config/: Cargo.toml
bins/config/src/: capture.rs  example.rs  main.rs  schema.rs
bins/config/tests/: cli_parsing.rs
bins/devlink/: Cargo.toml
bins/devlink/src/: main.rs
bins/diag/: Cargo.toml
bins/diag/src/: check.rs  interface.rs  main.rs  scan.rs  watch.rs
bins/ethtool/: Cargo.toml
bins/ethtool/src/: main.rs
bins/ip/: Cargo.toml
bins/ip/src/: main.rs
bins/ip/src/commands/: address.rs  link.rs  link_add.rs  macsec.rs  maddress.rs  mod.rs  monitor.rs  mptcp.rs  neighbor.rs  netns.rs  nexthop.rs  route.rs  rule.rs  sr.rs  tunnel.rs  vrf.rs  xfrm.rs
bins/ip/tests/: cli_parsing.rs
bins/nft/: Cargo.toml
bins/nft/src/: main.rs
bins/ss/: Cargo.toml
bins/ss/src/: dns.rs  main.rs  output.rs  procmap.rs
bins/ss/tests/: cli_parsing.rs
bins/tc/: Cargo.toml
bins/tc/src/: main.rs
bins/tc/src/commands/: action.rs  chain.rs  class.rs  filter.rs  mod.rs  monitor.rs  qdisc.rs
bins/tc/tests/: cli_parsing.rs
bins/wg/: Cargo.toml
bins/wg/src/: conf.rs  json.rs  keys.rs  main.rs  output.rs  set.rs  show.rs  watch.rs
bins/wifi/: Cargo.toml
bins/wifi/src/: main.rs
crates/nlink/: Cargo.toml  public-api.txt
crates/nlink-macros/: Cargo.toml  README.md
crates/nlink-macros/src/: codec.rs  genl_attribute.rs  genl_command.rs  genl_enum.rs  genl_family.rs  genl_message.rs  lib.rs  netlink_attrs.rs
crates/nlink-macros/tests/: genl_attribute_derive.rs  genl_command_derive.rs  genl_enum_derive.rs  trybuild.rs
crates/nlink/examples/: README.md  addresses.rs  error_handling.rs  link_create.rs  list_interfaces.rs  monitor.rs  monitor_namespace.rs  namespaces.rs  neighbors.rs  routes.rs  stats.rs  tc_htb.rs  tc_netem.rs  tc_stats.rs
crates/nlink/examples/audit/: audit_status.rs
crates/nlink/examples/bridge/: fdb.rs  vlan.rs
crates/nlink/examples/config/: declarative.rs  round_trip.rs  stack.rs
crates/nlink/examples/connector/: process_monitor.rs  process_monitor_stream.rs
crates/nlink/examples/diagnostics/: bottleneck.rs  connectivity.rs  health_check.rs  scan.rs
crates/nlink/examples/events/: ip_monitor.rs  monitor.rs  monitor_namespace.rs  multi_source.rs  resync_loop.rs  tc_monitor.rs
crates/nlink/examples/fib_lookup/: route_lookup.rs
crates/nlink/examples/genl/: devlink.rs  dpll.rs  ethtool_features.rs  ethtool_link_state.rs  ethtool_monitor.rs  ethtool_rings.rs  macsec.rs  mptcp.rs  net_shaper.rs  nl80211.rs  ovpn.rs  wireguard.rs
crates/nlink/examples/impair/: per_peer.rs
crates/nlink/examples/lab/: three_namespace.rs
crates/nlink/examples/macros/: define_taskstats.rs
crates/nlink/examples/namespace/: events.rs  watch.rs
crates/nlink/examples/netfilter/: conntrack.rs  conntrack_events.rs
crates/nlink/examples/nftables/: declarative.rs  firewall.rs
crates/nlink/examples/pool/: parallel_dump.rs
crates/nlink/examples/ratelimit/: simple.rs
crates/nlink/examples/reflector/: watch_cache.rs
crates/nlink/examples/route/: addresses.rs  batch.rs  bond.rs  error_handling.rs  link_create.rs  list_interfaces.rs  mpls.rs  namespaces.rs  neighbors.rs  nexthop.rs  routes.rs  srv6.rs  stats.rs  stream_dump.rs  timeout.rs
crates/nlink/examples/selinux/: selinux_monitor.rs  selinux_monitor_stream.rs
crates/nlink/examples/sockdiag/: filter_expr.rs  kill.rs  list_sockets.rs  rate_top.rs  socket_owners.rs  summary.rs  tcp_connections.rs  unix_sockets.rs
crates/nlink/examples/uevent/: device_monitor.rs  device_monitor_stream.rs
crates/nlink/examples/xfrm/: ipsec_monitor.rs
crates/nlink/src/: lib.rs  prelude.rs
crates/nlink/src/facade/: apply.rs  diff.rs  mod.rs  stack.rs  watch.rs
crates/nlink/src/lab/: bridge.rs  mod.rs  veth.rs
crates/nlink/src/macros/: genl_dispatch.rs  mod.rs
crates/nlink/src/netlink/: action.rs  addr.rs  attr.rs  audit.rs  batch.rs  bridge_vlan.rs  builder.rs  connection.rs  connector.rs  diagnostics.rs  dispatcher.rs  dump_stream.rs  error.rs  events.rs  fdb.rs  fib_lookup.rs  filter.rs  impair.rs  interface_ref.rs  link.rs  mdb.rs  message.rs  mod.rs  mpls.rs  namespace.rs  namespace_events.rs  namespace_watcher.rs  neigh.rs  netfilter.rs  nexthop.rs  parse.rs  parse_params.rs  parser_proptest.rs  protocol.rs  (+25 more)
crates/nlink/tests/: integration.rs
crates/rip/: Cargo.toml
crates/rip-netlink/: Cargo.toml  README.md
crates/rip-netlink/src/: attr.rs  builder.rs  connection.rs  error.rs  events.rs  lib.rs  message.rs  parse.rs  socket.rs  stats.rs  tc.rs  tc_options.rs
crates/rip-netlink/tests/: integration.rs
crates/rip-sockdiag/: Cargo.toml
crates/rip-sockdiag/src/: connection.rs  error.rs  filter.rs  socket.rs  types.rs
crates/rip-tuntap/: Cargo.toml
crates/rip-tuntap/src/: device.rs
crates/rip/examples/: list_interfaces.rs  monitor.rs  stats.rs
crates/rip/src/: lib.rs
(+483 files in other folders)
