[workspace]
resolver = "2"
members = [
    "crates/nlink",
    "bins/ip",
    "bins/tc",
    "bins/ss",
    "bins/bridge",
    "bins/wg",
    "bins/diag",
    "bins/config",
    "bins/ethtool",
    "bins/devlink",
    "bins/nft",
    "bins/wifi",
]

[workspace.package]
version = "0.15.1"
edition = "2024"
# Minimum Supported Rust Version. Tracks current stable: this
# project is happy to require contributors and downstream
# consumers stay on a recent toolchain in exchange for using
# modern language features without contortion. Bump in lockstep
# with stable; called out in CHANGELOG when it advances.
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/p13marc/nlink"
authors = ["Marc Pardo <p13marc@gmail.com>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "net", "io-util", "sync"] }

# Netlink socket (thin libc wrapper - socket ops only)
netlink-sys = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"

# Serialization (for JSON output)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
bytes = "1"
libc = "0.2"

# Parser combinators
winnow = "1.0"

# Zero-copy serialization
zerocopy = { version = "0.8", features = ["derive"] }

# Stream utilities
tokio-stream = "0.1"

# Proc macros
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

# Workspace crates
nlink = { path = "crates/nlink" }
