[package]
name = "nlink-bridge"
description = "Bridge management utility"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "bridge"
path = "src/main.rs"

[dependencies]
nlink = { workspace = true, features = ["output"] }
tokio = { workspace = true }
tokio-stream = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
atty = "0.2"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
