[package]
name = "nlink-bridge"
description = "Bridge management utility"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "nlink-bridge"
path = "src/main.rs"

[dependencies]
nlink = { workspace = true, features = ["output"] }
tokio = { workspace = true }
tokio-stream = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
atty = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
