[package]
name = "nlink-config"
description = "Declarative network configuration utility"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "nlink-config"
path = "src/main.rs"

[dependencies]
nlink = { workspace = true, features = ["output"] }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
