[package]
name = "nlink-devlink"
description = "Devlink device management utility"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "nlink-devlink"
path = "src/main.rs"

[dependencies]
nlink = { workspace = true, features = ["output"] }
tokio = { workspace = true }
clap = { workspace = true }
tokio-stream = { workspace = true }
serde_json = { workspace = true }
