[package]
name = "nlink-diag"
description = "Network diagnostics utility"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "nlink-diag"
path = "src/main.rs"

[dependencies]
nlink = { workspace = true, features = ["output"] }
tokio = { workspace = true }
tokio-stream = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
