[package]
name = "rip-ip"
description = "ip command - network interface and routing configuration"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ip"
path = "src/main.rs"

[dependencies]
rip-netlink = { workspace = true }
rip-lib = { workspace = true }
rip-output = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true }
anyhow = "1"
atty = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
