[package]
name = "nlink-ip"
description = "ip command - network interface and routing configuration"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "ip"
path = "src/main.rs"

[dependencies]
nlink = { workspace = true, features = ["output"] }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true }
anyhow = "1"
atty = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
