[package]
name = "nlink-ss"
description = "ss command - socket statistics"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "ss"
path = "src/main.rs"

[dependencies]
nlink = { workspace = true, features = ["sockdiag", "output"] }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true }
anyhow = "1"
atty = "0.2"
