[package]
name = "rip-tc"
description = "Traffic control tool"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "tc"
path = "src/main.rs"

[dependencies]
rip = { workspace = true, features = ["tc", "output"] }
tokio = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
