[package]
name = "rip-netlink"
description = "Async netlink protocol implementation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
netlink-sys = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
serde_json = { workspace = true }
libc = "0.2"
