[package]
name = "rip-netlink"
description = "Async netlink protocol implementation"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
# Enable integration tests (require root or network namespace)
integration = []

[dependencies]
tokio = { workspace = true }
netlink-sys = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true }
winnow = { workspace = true }

[dev-dependencies]
rip-lib = { workspace = true }
