[package]
name = "rip-tuntap"
description = "TUN/TAP device management library"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
# Enable async support
async = ["tokio"]

[dependencies]
thiserror = { workspace = true }
libc = { workspace = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
